Started Navbar and added font styles

--- a/index.html
+++ b/index.html
@@ -8,6 +8,22 @@
     <title>Coworker Landing Page</title>
   </head>
   <body>
-    <h1>Hello Landing Page</h1>
+    <nav class="navbar">
+      <div class="right">
+        <ul>
+          <li class="logo">RK</li>
+          <li class="nav-item">Temukan Lokasi</li>
+          <li class="nav-item">Jenis Ruang</li>
+          <li class="nav-item">Komunitas</li>
+          <li class="nav-item">Blog</li>
+        </ul>
+      </div>
+      <div class="left">
+        <ul>
+          <li>Untuk Startup</li>
+          <li>Login</li>
+        </ul>
+      </div>
+    </nav>
   </body>
 </html>
