--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Coworker Landing Page</title>
   </head>
   <body>
+    <!-- Navbar -->
     <nav class="navbar">
       <div class="right">
         <ul>
@@ -25,5 +26,27 @@
         </ul>
       </div>
     </nav>
+    <!-- Header Section -->
+    <div class="header container">
+      <h1 class="header-h1">
+        Temukan Ruang <br />
+        Kerja Dimanapun
+      </h1>
+      <div>
+        <form action="#">
+          <div class="form-container">
+            <div class="select-container">
+              <p>Temukan ruang kerja di</p>
+              <select name="select">
+                <option value="Jakarta">Jakarta</option>
+              </select>
+            </div>
+            <div>
+              <button type="submit" class="submit-button">Cari Sekarang</button>
+            </div>
+          </div>
+        </form>
+      </div>
+    </div>
   </body>
 </html>
