Created Description Section

--- a/index.html
+++ b/index.html
@@ -48,5 +48,22 @@
         </form>
       </div>
     </div>
+    <!-- description  -->
+    <div class="container description">
+      <div class="desc-wrapper">
+        <div class="desc-heading">
+          <h3>Pilih Ruang Kerja Sesuai Keinginanmu</h3>
+        </div>
+        <div class="desc-content">
+          <p>
+            Kami yakin kamu akan menemukan ruang kerja yang sesuai dengan
+            keinginan dan seleramu. Kami memastikan kamu akan nyaman. <br />
+            <a href="#">Lihat semua jenis ruang kerja</a>
+          </p>
+        </div>
+      </div>
+    </div>
+
+    <!-- Card Section -->
   </body>
 </html>
