Created Cards Section

--- a/index.html
+++ b/index.html
@@ -65,5 +65,33 @@
     </div>
 
     <!-- Card Section -->
+    <div class="container">
+      <div class="card-section">
+        <div class="card girl">
+          <div class="inner-card">
+            <h5>Home Office</h5>
+            <p>12 Lokasi</p>
+          </div>
+        </div>
+        <div class="card office">
+          <div class="inner-card">
+            <h5>Clean Simple</h5>
+            <p>12 Lokasi</p>
+          </div>
+        </div>
+        <div class="card phone">
+          <div class="inner-card">
+            <h5>Cafe Ambience</h5>
+            <p>12 Lokasi</p>
+          </div>
+        </div>
+        <div class="card laptop">
+          <div class="inner-card">
+            <h5>Home Work</h5>
+            <p>12 Lokasi</p>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
