--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./src/styles/styles.css" />
+    <link rel="stylesheet" href="./src/styles/fontawesome.min.css" />
     <title>Coworker Landing Page</title>
   </head>
   <body>
@@ -89,6 +90,55 @@
           <div class="inner-card">
             <h5>Home Work</h5>
             <p>12 Lokasi</p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- information Section  -->
+    <div class="info">
+      <div class="info-left">
+        <div>
+          <h3>Kenapa Ruang Kerja?</h3>
+          <p class="info-desc">
+            Kami telah berpengalaman melayani ratusan ribu orang dalam menemukan
+            ruang kerja idaman mereka
+          </p>
+          <h2 class="numbers">600+</h2>
+          <p class="supported-text">Ruang Kerja di seluruh Indonesia</p>
+          <h2 class="numbers mt-10">135+</h2>
+          <p class="supported-text">Staff yang siap membantu Anda</p>
+        </div>
+      </div>
+      <div class="info-right">
+        <div class="flex mb-5">
+          <div class="icon"><i class="fa fa-minus-circle"></i></div>
+          <div class="info-left-details">
+            <h4>Reservasi Mudah</h4>
+            <p>
+              Proses pemesanan ruang kerja hanya membutuhkan waktu kurang dari 2
+              menit.
+            </p>
+          </div>
+        </div>
+        <div class="flex mb-5">
+          <div class="icon"><i class="fa fa-minus-circle"></i></div>
+          <div class="info-left-details">
+            <h4>Waktu yang Fleksibel</h4>
+            <p>
+              Proses pemesanan ruang kerja hanya membutuhkan waktu kurang dari 2
+              menit.
+            </p>
+          </div>
+        </div>
+        <div class="flex mb-5">
+          <div class="icon"><i class="fa fa-minus-circle"></i></div>
+          <div class="info-left-details">
+            <h4>Kustomisasi Ruang</h4>
+            <p>
+              Proses pemesanan ruang kerja hanya membutuhkan waktu kurang dari 2
+              menit.
+            </p>
           </div>
         </div>
       </div>
