Created Grid Sections

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./src/styles/styles.css" />
-    <link rel="stylesheet" href="./src/styles/fontawesome.min.css" />
+    <link rel="stylesheet" href="./src/styles/all.css" />
+
     <title>Coworker Landing Page</title>
   </head>
   <body>
@@ -110,9 +111,10 @@
           <p class="supported-text">Staff yang siap membantu Anda</p>
         </div>
       </div>
+
       <div class="info-right">
         <div class="flex mb-5">
-          <div class="icon"><i class="fa fa-minus-circle"></i></div>
+          <div class="icon"><i class="fa-solid fa-bomb"></i></div>
           <div class="info-left-details">
             <h4>Reservasi Mudah</h4>
             <p>
@@ -125,6 +127,7 @@
           <div class="icon"><i class="fa fa-minus-circle"></i></div>
           <div class="info-left-details">
             <h4>Waktu yang Fleksibel</h4>
+
             <p>
               Proses pemesanan ruang kerja hanya membutuhkan waktu kurang dari 2
               menit.
@@ -132,7 +135,9 @@
           </div>
         </div>
         <div class="flex mb-5">
-          <div class="icon"><i class="fa fa-minus-circle"></i></div>
+          <div class="icon">
+            <i class="fa-duotone fa-camera-retro" style="color: #1c7ed6"></i>
+          </div>
           <div class="info-left-details">
             <h4>Kustomisasi Ruang</h4>
             <p>
@@ -140,6 +145,19 @@
               menit.
             </p>
           </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Grid Section -->
+    <div class="container">
+      <h3 class="grid-heading">Ruang Kerja di dekatmu</h3>
+      <div class="grid-container">
+        <div class="grid-item">
+          <div class="image-section"></div>
+          <h4>Summer Tower</h4>
+          <p>Jl. Lorem Ipsum no.62, Wakanda Universe</p>
+          <div><span class="bolder">Rp 150.000</span> / <span class="lighter">hari</span class="lighter"></div>
         </div>
       </div>
     </div>
