Created grid section

--- a/index.html
+++ b/index.html
@@ -159,6 +159,37 @@
           <p>Jl. Lorem Ipsum no.62, Wakanda Universe</p>
           <div><span class="bolder">Rp 150.000</span> / <span class="lighter">hari</span class="lighter"></div>
         </div>
+           <div class="grid-item">
+          <div class="image-section"></div>
+          <h4>Summer Tower</h4>
+          <p>Jl. Lorem Ipsum no.62, Wakanda Universe</p>
+          <div><span class="bolder">Rp 150.000</span> / <span class="lighter">hari</span class="lighter"></div>
+        </div>
+           <div class="grid-item">
+          <div class="image-section"></div>
+          <h4>Summer Tower</h4>
+          <p>Jl. Lorem Ipsum no.62, Wakanda Universe</p>
+          <div><span class="bolder">Rp 150.000</span> / <span class="lighter">hari</span class="lighter"></div>
+        </div>
+           <div class="grid-item">
+          <div class="image-section"></div>
+          <h4>Summer Tower</h4>
+          <p>Jl. Lorem Ipsum no.62, Wakanda Universe</p>
+          <div><span class="bolder">Rp 150.000</span> / <span class="lighter">hari</span class="lighter"></div>
+        </div>
+           <div class="grid-item">
+          <div class="image-section"></div>
+          <h4>Summer Tower</h4>
+          <p>Jl. Lorem Ipsum no.62, Wakanda Universe</p>
+          <div><span class="bolder">Rp 150.000</span> / <span class="lighter">hari</span class="lighter"></div>
+        </div>
+         <div class="grid-item">
+          <div class="image-section"></div>
+          <h4>Summer Tower</h4>
+          <p>Jl. Lorem Ipsum no.62, Wakanda Universe</p>
+          <div><span class="bolder">Rp 150.000</span> / <span class="lighter">hari</span class="lighter"></div>
+        </div>
+        
       </div>
     </div>
   </body>
