Created Footer Section

--- a/index.html
+++ b/index.html
@@ -157,40 +157,80 @@
           <div class="image-section"></div>
           <h4>Summer Tower</h4>
           <p>Jl. Lorem Ipsum no.62, Wakanda Universe</p>
-          <div><span class="bolder">Rp 150.000</span> / <span class="lighter">hari</span class="lighter"></div>
+          <div>
+            <span class="bolder">Rp 150.000</span> /
+            <span class="lighter">hari</span>
+          </div>
         </div>
-           <div class="grid-item">
+        <div class="grid-item">
           <div class="image-section"></div>
           <h4>Summer Tower</h4>
           <p>Jl. Lorem Ipsum no.62, Wakanda Universe</p>
-          <div><span class="bolder">Rp 150.000</span> / <span class="lighter">hari</span class="lighter"></div>
+          <div>
+            <span class="bolder">Rp 150.000</span> /
+            <span class="lighter">hari</span>
+          </div>
         </div>
-           <div class="grid-item">
+        <div class="grid-item">
           <div class="image-section"></div>
           <h4>Summer Tower</h4>
           <p>Jl. Lorem Ipsum no.62, Wakanda Universe</p>
-          <div><span class="bolder">Rp 150.000</span> / <span class="lighter">hari</span class="lighter"></div>
+          <div>
+            <span class="bolder">Rp 150.000</span> /
+            <span class="lighter">hari</span>
+          </div>
         </div>
-           <div class="grid-item">
+        <div class="grid-item">
           <div class="image-section"></div>
           <h4>Summer Tower</h4>
           <p>Jl. Lorem Ipsum no.62, Wakanda Universe</p>
-          <div><span class="bolder">Rp 150.000</span> / <span class="lighter">hari</span class="lighter"></div>
+          <div>
+            <span class="bolder">Rp 150.000</span> /
+            <span class="lighter">hari</span>
+          </div>
         </div>
-           <div class="grid-item">
+        <div class="grid-item">
           <div class="image-section"></div>
           <h4>Summer Tower</h4>
           <p>Jl. Lorem Ipsum no.62, Wakanda Universe</p>
-          <div><span class="bolder">Rp 150.000</span> / <span class="lighter">hari</span class="lighter"></div>
+          <div>
+            <span class="bolder">Rp 150.000</span> /
+            <span class="lighter">hari</span>
+          </div>
         </div>
-         <div class="grid-item">
+        <div class="grid-item">
           <div class="image-section"></div>
           <h4>Summer Tower</h4>
           <p>Jl. Lorem Ipsum no.62, Wakanda Universe</p>
-          <div><span class="bolder">Rp 150.000</span> / <span class="lighter">hari</span class="lighter"></div>
+          <div>
+            <span class="bolder">Rp 150.000</span> /
+            <span class="lighter">hari</span>
+          </div>
         </div>
-        
       </div>
     </div>
+    <!-- Footer Section -->
+    <footer>
+      <div class="footer-container">
+        <div class="left-section">
+          <div>
+            <div class="quote-circle"></div>
+            <h2>Apa kata mereka tentang ruang kerja</h2>
+          </div>
+        </div>
+        <div class="right-section">
+          <h3>Help us improve our productivity</h3>
+          <p class="right-para">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
+            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+            aliquip ex ea commodo consequat.
+          </p>
+          <div class="footer-image-section"></div>
+          <p class="signature">Samantha William</p>
+          <p class="light-signature">Senior Designer at Design Studio</p>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
