Added responsive media queries

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <nav class="navbar">
       <div class="right">
         <ul>
-          <li class="logo">RK</li>
+          <div class="logo">RK</div>
           <li class="nav-item">Temukan Lokasi</li>
           <li class="nav-item">Jenis Ruang</li>
           <li class="nav-item">Komunitas</li>
@@ -26,6 +26,13 @@
           <li>Untuk Startup</li>
           <li>Login</li>
         </ul>
+      </div>
+      <div class="toggler">
+        <svg viewBox="0 0 100 80" width="30" height="30">
+          <rect width="100" height="20"></rect>
+          <rect y="30" width="100" height="20"></rect>
+          <rect y="60" width="100" height="20"></rect>
+        </svg>
       </div>
     </nav>
     <!-- Header Section -->
@@ -67,7 +74,7 @@
     </div>
 
     <!-- Card Section -->
-    <div class="container">
+    <div class="containe">
       <div class="card-section">
         <div class="card girl">
           <div class="inner-card">
@@ -97,7 +104,7 @@
     </div>
 
     <!-- information Section  -->
-    <div class="info">
+    <!-- <div class="info">
       <div class="info-left">
         <div>
           <h3>Kenapa Ruang Kerja?</h3>
@@ -147,10 +154,10 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
 
     <!-- Grid Section -->
-    <div class="container">
+    <!-- <div class="container">
       <h3 class="grid-heading">Ruang Kerja di dekatmu</h3>
       <div class="grid-container">
         <div class="grid-item">
@@ -208,9 +215,9 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
     <!-- Footer Section -->
-    <footer>
+    <!-- <footer>
       <div class="footer-container">
         <div class="left-section">
           <div>
@@ -231,6 +238,6 @@
           <p class="light-signature">Senior Designer at Design Studio</p>
         </div>
       </div>
-    </footer>
+    </footer> -->
   </body>
 </html>
