--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
     </div>
 
     <!-- information Section  -->
-    <!-- <div class="info">
+    <div class="info">
       <div class="info-left">
         <div>
           <h3>Kenapa Ruang Kerja?</h3>
@@ -154,10 +154,10 @@
           </div>
         </div>
       </div>
-    </div> -->
+    </div>
 
     <!-- Grid Section -->
-    <!-- <div class="container">
+    <div class="">
       <h3 class="grid-heading">Ruang Kerja di dekatmu</h3>
       <div class="grid-container">
         <div class="grid-item">
@@ -215,9 +215,9 @@
           </div>
         </div>
       </div>
-    </div> -->
+    </div>
     <!-- Footer Section -->
-    <!-- <footer>
+    <footer>
       <div class="footer-container">
         <div class="left-section">
           <div>
@@ -233,11 +233,18 @@
             ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
             aliquip ex ea commodo consequat.
           </p>
-          <div class="footer-image-section"></div>
+
+          <div class="footer-image-section">
+            <div class="sm-footer-img footer-img"></div>
+            <div class="md-footer-img footer-img"></div>
+            <div class="lg-footer-img footer-img"></div>
+            <div class="md-footer-img footer-img"></div>
+            <div class="sm-footer-img footer-img"></div>
+          </div>
           <p class="signature">Samantha William</p>
           <p class="light-signature">Senior Designer at Design Studio</p>
         </div>
       </div>
-    </footer> -->
+    </footer>
   </body>
 </html>
